# wasmer-java

./: .gitignore  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  build.gradle  gradlew  gradlew.bat  justfile  settings.gradle
.github/workflows/: release.yml  test.yml
examples/: .gitignore  GreetExample.java  MemoryExample.java  Simple.java  SimpleExample.java
include/: org_wasmer_Imports.h  org_wasmer_Instance.h  org_wasmer_Memory.h  org_wasmer_Module.h
java/: .gitignore  pom.xml
java/main/java/org/wasmer/: EmbeddedLibraryTools.java  Module.java
java/org/wasmer/: Instance.java
java/src/main/java/org/wasmer/: EmbeddedLibraryTools.java  Export.java  ExportedFunction.java  Exports.java  Instance.java  Memories.java  Memory.java  Module.java
java/src/test/java/org/wasmer/: InstanceTest.java  InstanteTests.java  MemoryTest.java  ModuleTest.java
src/: exception.rs  imports.rs  instance.rs  lib.rs  memory.rs  module.rs  types.rs  value.rs
src/java/org/wasmer/: EmbeddedLibraryTools.java  Exports.java  Imports.java  Instance.java  Memories.java  Memory.java  Module.java  Native.java  Type.java
src/java/org/wasmer/exports/: Export.java  Function.java
tests/java/org/wasmer/: ImportsTest.java  InstanceTest.java  MemoryTest.java  ModuleTest.java
tests/resources/: import_accessmemory.rs  import_accessmemory.wasm  import_simple.rs  import_simple.wasm
