[package]
publish = false
name = "wasmer-jni"
version = "0.2.0"
authors = ["Ivan Enderlin <ivan.enderlin@hoa-project.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
# 9fc9daaedd44994c439f8232809d3ae9dabe1bd3 is 1.0.0-rc1 - hasn't been released for wasmer-runtime
wasmer = { git = "https://github.com/wasmerio/wasmer", rev = "9fc9daaedd44994c439f8232809d3ae9dabe1bd3" }
wasmer-runtime = { git = "https://github.com/wasmerio/wasmer", rev = "9fc9daaedd44994c439f8232809d3ae9dabe1bd3" }
wasmer-runtime-core = { git = "https://github.com/wasmerio/wasmer", rev = "9fc9daaedd44994c439f8232809d3ae9dabe1bd3" }
jni = "0.16"
