[package]
publish = false
name = "wasmer-jni"
version = "0.3.0"
authors = ["Ivan Enderlin <ivan.enderlin@hoa-project.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasmer = { git = "https://github.com/wasmerio/wasmer", rev = "1.0.0" }
wasmer-runtime = { git = "https://github.com/wasmerio/wasmer", rev = "1.0.0" }
wasmer-runtime-core = { git = "https://github.com/wasmerio/wasmer", rev = "1.0.0" }
jni = "0.16"
